pc finished28